deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: hello-deployment
spec:
    replicas: 2
    selector:
       matchLabels:
          app: hello-app
    template:
       metadata:
          labels:
             app: hello-app
       spec:
          containers:
          - name: hello
            image: luwao/hello:v1
            ports:
              - name: web
                containerPort: 8000
            livenessProbe:
              httpGet:
                port: 8000
                path: /health/
              initialDelaySeconds: 10
              periodSeconds: 5
              timeoutSeconds: 2
            readinessProbe:
              httpGet:
                port: 8000
                path: /health/
              initialDelaySeconds: 10
              periodSeconds: 5
